[gd_scene load_steps=62 format=3 uid="uid://74s2kkp6vyei"]

[ext_resource type="Script" path="res://ui.gd" id="1_2kfxb"]
[ext_resource type="FontFile" uid="uid://b2533b4tb8qoc" path="res://Assets/Fonts/Playground.ttf" id="1_8xmhv"]
[ext_resource type="Texture2D" uid="uid://d26ll1qbummu8" path="res://Assets/vaisseau.png" id="2_fwcoq"]
[ext_resource type="Texture2D" uid="uid://dkrpt1gymoeoa" path="res://Assets/Earth_Image.png" id="3_n6ftk"]
[ext_resource type="Texture2D" uid="uid://drfpmcvb7pcm4" path="res://Assets/Terre spritesheet.png" id="3_qkufb"]
[ext_resource type="Texture2D" uid="uid://bxwpw2h3dokdo" path="res://Assets/Ã‰toile_sheet.png" id="4_wo3df"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pp572"]
texture = ExtResource("4_wo3df")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
1:0/0 = 0
1:1/0 = 0
0:1/0 = 0

[sub_resource type="TileSet" id="TileSet_3kqrb"]
sources/0 = SubResource("TileSetAtlasSource_pp572")

[sub_resource type="AtlasTexture" id="AtlasTexture_ivnu8"]
atlas = ExtResource("3_qkufb")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_8l86j"]
atlas = ExtResource("3_qkufb")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_f02hx"]
atlas = ExtResource("3_qkufb")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_oyqea"]
atlas = ExtResource("3_qkufb")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcai0"]
atlas = ExtResource("3_qkufb")
region = Rect2(600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gu2m"]
atlas = ExtResource("3_qkufb")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_hs6ey"]
atlas = ExtResource("3_qkufb")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldxx1"]
atlas = ExtResource("3_qkufb")
region = Rect2(1050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_d5ykv"]
atlas = ExtResource("3_qkufb")
region = Rect2(1200, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_40yas"]
atlas = ExtResource("3_qkufb")
region = Rect2(1350, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_irsbg"]
atlas = ExtResource("3_qkufb")
region = Rect2(1500, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_bve0c"]
atlas = ExtResource("3_qkufb")
region = Rect2(1650, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_8bjra"]
atlas = ExtResource("3_qkufb")
region = Rect2(1800, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_kmdjj"]
atlas = ExtResource("3_qkufb")
region = Rect2(1950, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_kddoh"]
atlas = ExtResource("3_qkufb")
region = Rect2(2100, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_kpu4g"]
atlas = ExtResource("3_qkufb")
region = Rect2(2250, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1pev"]
atlas = ExtResource("3_qkufb")
region = Rect2(2400, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_nv4rb"]
atlas = ExtResource("3_qkufb")
region = Rect2(2550, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kkj4"]
atlas = ExtResource("3_qkufb")
region = Rect2(2700, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_8bdrn"]
atlas = ExtResource("3_qkufb")
region = Rect2(2850, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_mag1a"]
atlas = ExtResource("3_qkufb")
region = Rect2(3000, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_vc81s"]
atlas = ExtResource("3_qkufb")
region = Rect2(3150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_77luy"]
atlas = ExtResource("3_qkufb")
region = Rect2(3300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0q2j"]
atlas = ExtResource("3_qkufb")
region = Rect2(3450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_avyf3"]
atlas = ExtResource("3_qkufb")
region = Rect2(3600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_twlcp"]
atlas = ExtResource("3_qkufb")
region = Rect2(3750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_no8vm"]
atlas = ExtResource("3_qkufb")
region = Rect2(3900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_2f12f"]
atlas = ExtResource("3_qkufb")
region = Rect2(4050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_3tmwf"]
atlas = ExtResource("3_qkufb")
region = Rect2(4200, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7u6g"]
atlas = ExtResource("3_qkufb")
region = Rect2(4350, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_607pv"]
atlas = ExtResource("3_qkufb")
region = Rect2(4500, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5csm"]
atlas = ExtResource("3_qkufb")
region = Rect2(4650, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_xy3w2"]
atlas = ExtResource("3_qkufb")
region = Rect2(4800, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_jrke8"]
atlas = ExtResource("3_qkufb")
region = Rect2(4950, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfxpv"]
atlas = ExtResource("3_qkufb")
region = Rect2(5100, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_5d2l3"]
atlas = ExtResource("3_qkufb")
region = Rect2(5250, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_1amne"]
atlas = ExtResource("3_qkufb")
region = Rect2(5400, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_de1uw"]
atlas = ExtResource("3_qkufb")
region = Rect2(5550, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_3hnix"]
atlas = ExtResource("3_qkufb")
region = Rect2(5700, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_mklx4"]
atlas = ExtResource("3_qkufb")
region = Rect2(5850, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_udbgt"]
atlas = ExtResource("3_qkufb")
region = Rect2(6000, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_vovco"]
atlas = ExtResource("3_qkufb")
region = Rect2(6150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_nhqgd"]
atlas = ExtResource("3_qkufb")
region = Rect2(6300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_23ojo"]
atlas = ExtResource("3_qkufb")
region = Rect2(6450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_bm41q"]
atlas = ExtResource("3_qkufb")
region = Rect2(6600, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_8tteu"]
atlas = ExtResource("3_qkufb")
region = Rect2(6750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_dk5of"]
atlas = ExtResource("3_qkufb")
region = Rect2(6900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkcfu"]
atlas = ExtResource("3_qkufb")
region = Rect2(7050, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_skhyp"]
atlas = ExtResource("3_qkufb")
region = Rect2(7200, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_icea8"]
atlas = ExtResource("3_qkufb")
region = Rect2(7350, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_hpxie"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivnu8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8l86j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f02hx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oyqea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcai0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gu2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hs6ey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldxx1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d5ykv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_40yas")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irsbg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bve0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8bjra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kmdjj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kddoh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kpu4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1pev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nv4rb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6kkj4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8bdrn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mag1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vc81s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_77luy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0q2j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_avyf3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_twlcp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_no8vm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2f12f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3tmwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7u6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_607pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5csm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xy3w2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jrke8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfxpv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5d2l3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1amne")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_de1uw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3hnix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mklx4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_udbgt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vovco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nhqgd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23ojo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bm41q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8tteu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dk5of")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkcfu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_skhyp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_icea8")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4i68k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4ve4u"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_2kfxb")

[node name="InGame" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="ScoreLabel" type="Label" parent="InGame"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 25
theme_override_fonts/font = ExtResource("1_8xmhv")
theme_override_font_sizes/font_size = 200
text = "123"

[node name="LifePanel" type="Panel" parent="InGame"]
layout_mode = 1
offset_left = 40.0
offset_top = 40.0
offset_right = 426.0
offset_bottom = 203.0

[node name="LifeIcon1" type="TextureRect" parent="InGame/LifePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -161.5
offset_top = -55.0
offset_right = -56.5
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_fwcoq")

[node name="LifeIcon2" type="TextureRect" parent="InGame/LifePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.5
offset_top = -55.0
offset_right = 52.5
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_fwcoq")

[node name="LifeIcon3" type="TextureRect" parent="InGame/LifePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 57.5
offset_top = -55.0
offset_right = 162.5
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_fwcoq")

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TileMap" type="TileMap" parent="Menu"]
scale = Vector2(7, 7)
tile_set = SubResource("TileSet_3kqrb")
format = 2
layer_0/tile_data = PackedInt32Array(2031641, 0, 0, 262146, 0, 0, 458765, 0, 0, 65552, 0, 0, 5, 0, 0, 131072, 0, 0, 131088, 0, 0, 393230, 65536, 0, 65547, 65536, 0, 327685, 65536, 0, 458752, 65536, 0, 589832, 65536, 0, 589826, 65536, 0, 393219, 65536, 0, 524303, 65536, 0, 327696, 65536, 0, 65545, 65536, 0, 196620, 65536, 1, 131076, 65536, 1, 458756, 65536, 1, 524289, 65536, 1, 262148, 65536, 1, 196612, 65536, 1, 131074, 65536, 1, 196622, 65536, 1, 458764, 65536, 1)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Menu"]
position = Vector2(960.5, 572.5)
scale = Vector2(4.91333, 4.88667)
sprite_frames = SubResource("SpriteFrames_hpxie")
frame = 29
frame_progress = 0.153526

[node name="TextureRect" type="TextureRect" parent="Menu"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -368.5
offset_top = -338.5
offset_right = 368.5
offset_bottom = 398.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_n6ftk")

[node name="VersionLabel" type="Label" parent="Menu"]
layout_mode = 1
offset_left = 40.0
offset_top = 23.0
offset_right = 233.0
offset_bottom = 122.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 50
theme_override_fonts/font = ExtResource("1_8xmhv")
theme_override_font_sizes/font_size = 100
text = "V1.0"

[node name="CreditLabel" type="Label" parent="Menu"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 21.0
offset_top = -106.0
offset_right = 652.0
offset_bottom = -47.0
grow_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 50
theme_override_fonts/font = ExtResource("1_8xmhv")
theme_override_font_sizes/font_size = 60
text = "A game by Squach90"

[node name="TitleLabel" type="Label" parent="Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -592.5
offset_top = -297.5
offset_right = 592.5
offset_bottom = -174.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 50
theme_override_fonts/font = ExtResource("1_8xmhv")
theme_override_font_sizes/font_size = 125
text = "Gravtity Guardian"

[node name="PlayButton" type="Button" parent="Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -108.5
offset_top = 218.5
offset_right = 108.5
offset_bottom = 325.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 50
theme_override_fonts/font = ExtResource("1_8xmhv")
theme_override_font_sizes/font_size = 100
theme_override_styles/pressed = SubResource("StyleBoxEmpty_4i68k")
theme_override_styles/focus = SubResource("StyleBoxEmpty_4ve4u")
text = "Play"
flat = true

[node name="GameOver" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.215902, 0.215902, 0.215902, 1)

[node name="GameOverLabel" type="Label" parent="GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -527.0
offset_top = -314.5
offset_right = 527.0
offset_bottom = -117.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.765996, 0, 0.0594015, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 50
theme_override_fonts/font = ExtResource("1_8xmhv")
theme_override_font_sizes/font_size = 200
text = "GameOver"

[node name="QuitButton" type="Button" parent="GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.5
offset_top = 146.5
offset_right = 110.5
offset_bottom = 253.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 30
theme_override_fonts/font = ExtResource("1_8xmhv")
theme_override_font_sizes/font_size = 100
text = "Quit"
flat = true

[node name="HighScoreLabel" type="Label" parent="GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 40
theme_override_fonts/font = ExtResource("1_8xmhv")
theme_override_font_sizes/font_size = 100
text = "High Score : ???"

[connection signal="pressed" from="Menu/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="GameOver/QuitButton" to="." method="_on_quit_button_pressed"]
